# LU-GA-Canvas-Helps

./: .gitignore  AutoAccomodations.py  README.md  TODO.md  auto_accomodations.py  cvapiutils.py  identify_quiz_concerns.py  main.py  modify_time_limits.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
_old/src/: modify_due_dates.py  post_final_grades.py  update_attendance_verification.py  update_lh_inactivity.py
_old/src/modules/: constants.py
lugach/: constants.py  cvutils.py  lhutils.py  thutils.py
lugach/apps/: __init__.py  get_grades.py  identify_absent_students.py  identify_quiz_concerns.py  modify_attendance.py  modify_due_dates.py  modify_time_limits.py  post_final_grades.py  search_student_by_name.py  setup.py  take_attendance.py  update_attendance_verification.py
src/: _cvutils.py  _lhutils.py  _thutils.py  identify_absent_students.py  identify_quiz_concerns.py  main.py  modify_due_dates.py  modify_time_limits.py  post_final_grades.py  search_student_by_name.py  update_attendance_verification.py
src/lugach/: __init__.py  cvutils.py  interactive.py  secrets.py  thutils.py
src/lugach/apps/: __init__.py  post_final_grades.py  search_student_by_name.py  setup.py  update_attendance_verification.py
src/lugach/cli/: __init__.py  interactive.py
src/lugach/core/: cvutils.py  lhutils.py  thutils.py
src/modules/: canvasapiutils.py  lhutils.py  thutils.py
