[project]
name = "lugach"
version = "0.1.0"
description = "An application that makes Liberty University GAs' lives easier."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.3.0",
    "attrs==23.2.0",
    "canvasapi==3.2.0",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "h11==0.16.0",
    "idna==3.6",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.0.2",
    "keyring==25.3.0",
    "more-itertools==10.4.0",
    "outcome==1.3.0.post0",
    "pycparser==2.21",
    "pysocks==1.7.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "pytz==2023.3.post1",
    "pywin32-ctypes==0.2.3",
    "requests==2.31.0",
    "selenium==4.17.2",
    "setuptools==65.5.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sortedcontainers==2.4.0",
    "trio==0.24.0",
    "trio-websocket==0.11.1",
    "types-python-dateutil==2.8.19.20240106",
    "typing-extensions==4.9.0",
    "urllib3==2.1.0",
    "wsproto==1.2.0",
]

[project.scripts]
lugach = 'lugach:main'

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"